kube/globalbitcoincash-ingress-tls.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: globalbitcoincash-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - www.globalbitcoin.cash
    - globalbitcoin.cash
    secretName: globalbitcoincash-tls
  backend:
    serviceName: globalbitcoincash
    servicePort: 107
  rules:
  - host: globalbitcoin.cash
    http:
      paths:
      - path: /
        backend:
          serviceName: globalbitcoincash
          servicePort: 107
  - host: www.globalbitcoin.cash
    http:
      paths:
      - path: /
        backend:
          serviceName: globalbitcoincash
          servicePort: 107
